--- a/app/assets/stylesheets/variables.less
+++ b/app/assets/stylesheets/variables.less
@@ -7,6 +7,9 @@
 @redEmacs: #CA2525;
 
 @redPlay: #E74440;
+@redLightPlay: #F0D7D7;
 @greyPlay: #DCDDD6;
+@greyLightPlay: #D0D7D8;
+@greyLightIPlay: #DFDFDF;
 @blackPlay: #353635;
 @greenPlay: #87B952;
