--- a/app/views/signin.scala.html
+++ b/app/views/signin.scala.html
@@ -5,8 +5,8 @@
         <title>Play Story > Sign in</title>
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <!-- CSS -->
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/layout.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/signin.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/signin/layout.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/signin/signin.css")">
         <!-- Javascript libs -->
         <script type="text/javascript" src="@routes.Assets.at("javascripts/libs/procrastination.js")"></script>
     </head>
