refactor some backend code

--- a/app/views/home.scala.html
+++ b/app/views/home.scala.html
@@ -32,7 +32,10 @@
             <span class="message">application - [Story] Welcome : User(Renault,Sébastien,sre(at)zenexity.com,fr-FR,None)</span>
           </div>
           <div class="footer">
-            <a class="comment" href="#">Comment</a> | <a class="share" href="#">Share</a> | <a class="bookmark" href="#">Bookmark</a> | <a class="bookmark" href="#">Related</a>
+            <a class="comment" href="#">Comment</a> |
+            <a class="share" href="#">Share</a> |
+            <a class="bookmark" href="#">Bookmark</a> |
+            <a class="bookmark" href="#">Related</a>
           </div>
       </li>
 
