--- a/app/views/home.scala.html
+++ b/app/views/home.scala.html
@@ -17,208 +17,7 @@
 
 <section class="column-middle">
   <div class="feeds">
-    <ul>
-      <li class="feed">
-        <div class="avatar">
-          <img src="/assets/images/commons/avatar.png" width="50px" height="50px" alt="play story"/>
-        </div>
-        <div class="log">
-          <div class="header">
-            <a class="project" href="#">Play Story</a>
-            <span class="time">Today, 16h01</span>
-          </div>
-          <div class="content">
-            <span class="level">[info]</span>
-            <span class="message">application - [Story] Welcome : User(Renault,Sébastien,sre(at)zenexity.com,fr-FR,None)</span>
-          </div>
-          <div class="footer">
-            <a class="comment" href="#">Comment</a> |
-            <a class="share" href="#">Share</a> |
-            <a class="bookmark" href="#">Bookmark</a> |
-            <a class="bookmark" href="#">Related</a>
-          </div>
-      </li>
-
-      <li class="feed">
-        <div class="avatar">
-          <img src="/assets/images/commons/avatar.png" width="50px" height="50px" alt="play story"/>
-        </div>
-        <div class="log">
-          <div class="header">
-            <a class="project" href="#">Play Story</a>
-            <span class="time">Today, 16h01</span>
-          </div>
-          <div class="content">
-            <span class="level">[info]</span>
-            <span class="message">application - [Story] Welcome : User(Renault,Sébastien,sre(at)zenexity.com,fr-FR,None)</span>
-          </div>
-          <div class="footer">
-            <a class="comment" href="#">Comment</a> | <a class="share" href="#">Share</a> | <a class="bookmark" href="#">Bookmark</a>
-          </div>
-      </li>
-
-      <li class="feed">
-        <div class="avatar">
-          <img src="/assets/images/commons/avatar.png" width="50px" height="50px" alt="play story"/>
-        </div>
-        <div class="log">
-          <div class="header">
-            <a class="project" href="#">Play Story</a>
-            <span class="time">Today, 16h01</span>
-          </div>
-          <div class="content">
-            <span class="level">[info]</span>
-            <span class="message">application - [Story] Welcome : User(Renault,Sébastien,sre(at)zenexity.com,fr-FR,None)</span>
-          </div>
-          <div class="footer">
-            <a class="comment" href="#">Comment</a> | <a class="share" href="#">Share</a> | <a class="bookmark" href="#">Bookmark</a>
-          </div>
-      </li>
-
-      <li class="feed">
-        <div class="avatar">
-          <img src="/assets/images/commons/avatar.png" width="50px" height="50px" alt="play story"/>
-        </div>
-        <div class="log">
-          <div class="header">
-            <a class="project" href="#">Play Story</a>
-            <span class="time">Today, 16h01</span>
-          </div>
-          <div class="content">
-            <span class="level">[info]</span>
-            <span class="message">application - [Story] Welcome : User(Renault,Sébastien,sre(at)zenexity.com,fr-FR,None)</span>
-          </div>
-          <div class="footer">
-            <a class="comment" href="#">Comment</a> | <a class="share" href="#">Share</a> | <a class="bookmark" href="#">Bookmark</a>
-          </div>
-      </li>
-
-      <li class="feed">
-        <div class="avatar">
-          <img src="/assets/images/commons/avatar.png" width="50px" height="50px" alt="play story"/>
-        </div>
-        <div class="log">
-          <div class="header">
-            <a class="project" href="#">Play Story</a>
-            <span class="time">Today, 16h01</span>
-          </div>
-          <div class="content">
-            <span class="level">[info]</span>
-            <span class="message">application - [Story] Welcome : User(Renault,Sébastien,sre(at)zenexity.com,fr-FR,None)</span>
-          </div>
-          <div class="footer">
-            <a class="comment" href="#">Comment</a> | <a class="share" href="#">Share</a> | <a class="bookmark" href="#">Bookmark</a>
-          </div>
-      </li>
-
-      <li class="feed">
-        <div class="avatar">
-          <img src="/assets/images/commons/avatar.png" width="50px" height="50px" alt="play story"/>
-        </div>
-        <div class="log">
-          <div class="header">
-            <a class="project" href="#">Play Story</a>
-            <span class="time">Today, 16h01</span>
-          </div>
-          <div class="content">
-            <span class="level">[info]</span>
-            <span class="message">application - [Story] Welcome : User(Renault,Sébastien,sre(at)zenexity.com,fr-FR,None)</span>
-          </div>
-          <div class="footer">
-            <a class="comment" href="#">Comment</a> | <a class="share" href="#">Share</a> | <a class="bookmark" href="#">Bookmark</a>
-          </div>
-      </li>
-
-      <li class="feed">
-        <div class="avatar">
-          <img src="/assets/images/commons/avatar.png" width="50px" height="50px" alt="play story"/>
-        </div>
-        <div class="log">
-          <div class="header">
-            <a class="project" href="#">Play Story</a>
-            <span class="time">Today, 16h01</span>
-          </div>
-          <div class="content">
-            <span class="level">[info]</span>
-            <span class="message">application - [Story] Welcome : User(Renault,Sébastien,sre(at)zenexity.com,fr-FR,None)</span>
-          </div>
-          <div class="footer">
-            <a class="comment" href="#">Comment</a> | <a class="share" href="#">Share</a> | <a class="bookmark" href="#">Bookmark</a>
-          </div>
-      </li>
-
-      <li class="feed">
-        <div class="avatar">
-          <img src="/assets/images/commons/avatar.png" width="50px" height="50px" alt="play story"/>
-        </div>
-        <div class="log">
-          <div class="header">
-            <a class="project" href="#">Play Story</a>
-            <span class="time">Today, 16h01</span>
-          </div>
-          <div class="content">
-            <span class="level">[info]</span>
-            <span class="message">application - [Story] Welcome : User(Renault,Sébastien,sre(at)zenexity.com,fr-FR,None)</span>
-          </div>
-          <div class="footer">
-            <a class="comment" href="#">Comment</a> | <a class="share" href="#">Share</a> | <a class="bookmark" href="#">Bookmark</a>
-          </div>
-      </li>
-
-      <li class="feed">
-        <div class="avatar">
-          <img src="/assets/images/commons/avatar.png" width="50px" height="50px" alt="play story"/>
-        </div>
-        <div class="log">
-          <div class="header">
-            <a class="project" href="#">Play Story</a>
-            <span class="time">Today, 16h01</span>
-          </div>
-          <div class="content">
-            <span class="level">[info]</span>
-            <span class="message">application - [Story] Welcome : User(Renault,Sébastien,sre(at)zenexity.com,fr-FR,None)</span>
-          </div>
-          <div class="footer">
-            <a class="comment" href="#">Comment</a> | <a class="share" href="#">Share</a> | <a class="bookmark" href="#">Bookmark</a>
-          </div>
-      </li>
-
-      <li class="feed">
-        <div class="avatar">
-          <img src="/assets/images/commons/avatar.png" width="50px" height="50px" alt="play story"/>
-        </div>
-        <div class="log">
-          <div class="header">
-            <a class="project" href="#">Play Story</a>
-            <span class="time">Today, 16h01</span>
-          </div>
-          <div class="content">
-            <span class="level">[info]</span>
-            <span class="message">application - [Story] Welcome : User(Renault,Sébastien,sre(at)zenexity.com,fr-FR,None)</span>
-          </div>
-          <div class="footer">
-            <a class="comment" href="#">Comment</a> | <a class="share" href="#">Share</a> | <a class="bookmark" href="#">Bookmark</a>
-          </div>
-      </li>
-
-      <li class="feed">
-        <div class="avatar">
-          <img src="/assets/images/commons/avatar.png" width="50px" height="50px" alt="play story"/>
-        </div>
-        <div class="log">
-          <div class="header">
-            <a class="project" href="#">Play Story</a>
-            <span class="time">Today, 16h01</span>
-          </div>
-          <div class="content">
-            <span class="level">[info]</span>
-            <span class="message">application - [Story] Welcome : User(Renault,Sébastien,sre(at)zenexity.com,fr-FR,None)</span>
-          </div>
-          <div class="footer">
-            <a class="comment" href="#">Comment</a> | <a class="share" href="#">Share</a> | <a class="bookmark" href="#">Bookmark</a>
-          </div>
-      </li>
-    </ul>
+    <ul></ul>
 </section>
 
 <section class="column-right">
@@ -226,6 +25,7 @@
     <h3>APPS</h3>
     <ul>
       <li><a href="#">DISCOVER</a></li>
+      <li><a href="#">ALL</a></li>
       <li><a href="#">GEONAUTE</a></li>
       <li><a href="#">SCAN'UP</a></li>
       <li><a href="#">IDOO</a></li>
@@ -235,8 +35,17 @@
 </section>
 
 }{
-<!--Home CSS imports -->
+<!-- Home CSS imports -->
 <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/story/home.css")">
 }{
-<!--Home javascript imports -->
+<!-- Home javascript templates -->
+@tmpl.feed()
+<!-- Home javascript imports -->
+<script type="text/javascript" src="@routes.Assets.at("javascripts/Router.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsView.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsDOM.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsModel.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsServer.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsView.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/home/home.js")"></script>
 }
