--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,7 +10,9 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/story/layout.css")">
         @css
         <!-- Javascript libs -->
+        <script type="text/javascript" src="@routes.Assets.at("javascripts/libs/jquery-1.7.1.min.js")"></script>
         <script type="text/javascript" src="@routes.Assets.at("javascripts/libs/procrastination.js")"></script>
+        <script type="text/javascript" src="@routes.Assets.at("javascripts/libs/underscore-1.3.1.min.js")"></script>
     </head>
     <body>
       <header>
