proceed to some clean

--- a/app/views/home/home.scala.html
+++ b/app/views/home/home.scala.html
@@ -39,7 +39,7 @@
 <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/story/home.css")">
 }{
 <!-- Home javascript templates -->
-@tmpl.feed()
+@feeds()
 <!-- Home javascript imports -->
 <script type="text/javascript" src="@routes.Assets.at("javascripts/Router.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/home/feeds/feedsView.js")"></script>
