--- a/app/assets/stylesheets/story/layout.less
+++ b/app/assets/stylesheets/story/layout.less
@@ -13,7 +13,12 @@ html {
 }
 
 a {
+    color: @blueEmacs;
     text-decoration: none;
+
+    &.visited {
+        color: @blueEmacs
+    }
 }
 
 h1 {
