--- a/app/assets/stylesheets/variables.less
+++ b/app/assets/stylesheets/variables.less
@@ -8,6 +8,7 @@
 
 @redPlay: #E74440;
 @redLightPlay: #F0D7D7;
+@orangePlay: #E77540;
 @greyPlay: #DCDDD6;
 @greyLightPlay: #D0D7D8;
 @greyLightIPlay: #DFDFDF;
