--- a/app/views/home/feeds.scala.html
+++ b/app/views/home/feeds.scala.html
@@ -7,12 +7,12 @@
     </div>
     <div class="log">
       <div class="header">
-        <a class="project" href="#">Play Story</a>
-        <span class="time">Today, 16h01</span>
+        <a class="project" href="#"><%= feed.project %></a>
+        <span class="time"><%=feed.date %></span>
       </div>
       <div class="content">
-        <span class="level">[info]</span>
-        <span class="message">application - [Story] Welcome : User(Renault,Sébastien,sre(at)zenexity.com,fr-FR,None)</span>
+        <span class="level"><%= feed.level %></span>
+        <span class="message"><%= feed.message %></span>
       </div>
       <div class="comments">
         <div class="comment">
