implement fifo stream

--- a/app/views/home/feeds.scala.html
+++ b/app/views/home/feeds.scala.html
@@ -8,7 +8,7 @@
     <div class="log">
       <div class="header">
         <a class="project" href="#"><%= feed.project %></a>
-        <span class="time"><%=feed.date %></span>
+        <span class="time"><%=feed.time %></span>
       </div>
       <div class="content">
         <span class="level"><%= feed.level %></span>
