--- a/app/views/home/main.scala.html
+++ b/app/views/home/main.scala.html
@@ -12,6 +12,7 @@
         <!-- Javascript libs -->
         <script type="text/javascript" src="@routes.Assets.at("javascripts/libs/jquery-1.7.1.min.js")"></script>
         <script type="text/javascript" src="@routes.Assets.at("javascripts/libs/procrastination.js")"></script>
+        <script type="text/javascript" src="@routes.Assets.at("javascripts/libs/http-jquery.procrastination.js")"></script>
         <script type="text/javascript" src="@routes.Assets.at("javascripts/libs/underscore-1.3.1.min.js")"></script>
     </head>
     <body>
